src/test/ui/libstd-case-typo/time.stderr
error[E0412]: cannot find type `duration` in this scope
  --> $DIR/time.rs:4:17
   |
LL | fn test_dur(_x: duration){}
   |                 ^^^^^^^^ not found in this scope
   |
help: did you mean `std::time::Duration`?
   |
LL | fn test_dur(_x: std::time::Duration){}
   |                 ^^^^^^^^^^^^^^^^^^^

error[E0412]: cannot find type `instant` in this scope
  --> $DIR/time.rs:6:17
   |
LL | fn test_ins(_x: instant){}
   |                 ^^^^^^^ not found in this scope
   |
help: did you mean `std::time::Instant`?
   |
LL | fn test_ins(_x: std::time::Instant){}
   |                 ^^^^^^^^^^^^^^^^^^

error[E0412]: cannot find type `Systemtime` in this scope
  --> $DIR/time.rs:8:21
   |
LL | fn test_systime(_x: Systemtime){}
   |                     ^^^^^^^^^^ not found in this scope
   |
help: did you mean `std::time::SystemTime`?
   |
LL | fn test_systime(_x: std::time::SystemTime){}
   |                     ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0412`.
